fixed overflow styling on my orders page

--- a/app/components/pagination2.css
+++ b/app/components/pagination2.css
@@ -1,13 +1,15 @@
 .paginationDetail {
   float: right;
   font-size: 12px;
-  margin-right: 150px;
+  width: 50%;
 }
 
 .paginationControl {
   float: right;
   font-size: 12px;
   margin-top: 3px;
+  width: 20%;
+  margin-right: 20%;
 }
 
 .paginationItem li {
@@ -76,4 +78,5 @@
   border-radius: 0px 0px 5px 5px;
   float: right;
   margin-top: 30px;
+  width: 45%;
 }
